--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ google-pasta==0.2.0
 grpcio==1.41.0
 h5py==3.1.0
 idna==3.2
+imageio==2.9.0
 importlib-metadata==4.8.1
 keras==2.6.0
 Keras-Preprocessing==1.1.2
@@ -21,6 +22,7 @@ numpy==1.19.5
 oauthlib==3.1.1
 opencv-python==4.5.1.48
 opt-einsum==3.3.0
+Pillow==8.3.2
 protobuf==3.18.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
@@ -32,10 +34,12 @@ tensorboard==2.6.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.0
 tensorflow==2.6.0
+tensorflow-addons==0.14.0
 tensorflow-estimator==2.6.0
 termcolor==1.1.0
 tf-slim==1.1.0
 tqdm==4.62.3
+typeguard==2.13.0
 typing-extensions==3.7.4.3
 urllib3==1.26.7
 Werkzeug==2.0.1
